# swagger.json
@@ -14,6 +14,10 @@
 		{
 			"name": "user",
 			"description": "Add/List/Update/Remove/Login User"
+		},
+		{
+			"name": "spot",
+			"description": "Add/List/Update/Search/Remove Spot"
 		}
 	],
 	"schemes": [
@@ -31,7 +35,7 @@
 				"tags": [
 					"user"
 				],
-				"description": "Returns all categories",
+				"description": "Returns all users",
 				"produces": [
 					"application/json"
 				],
@@ -81,7 +85,7 @@
 				"tags": [
 					"user"
 				],
-				"description": "deletes a user - deletes all companies also assigned to it",
+				"description": "deletes a user",
 				"parameters": [
 					{
 						"name": "id",
@@ -93,7 +97,7 @@
 				],
 				"responses": {
 					"204": {
-						"description": "pet deleted"
+						"description": "user deleted"
 					}
 				}
 			},
@@ -289,7 +293,139 @@
 
 				}
 			}
-    }
+    },"/spot": {
+		  "get": {
+		    "tags": [
+		      "spot"
+		    ],
+		    "description": "Returns all spots",
+		    "produces": [
+		      "application/json"
+		    ],
+		    "responses": {
+		      "200": {
+		        "description": "spot response",
+		        "schema": {
+		          "type": "array",
+		          "items": {
+		            "$ref": "#/definitions/Spot"
+		          }
+		        }
+		      }
+		    }
+		  },
+		  "post": {
+		    "tags": [
+		      "spot"
+		    ],
+		    "description": "Creates a new Spot",
+		    "produces": [
+		      "application/json"
+		    ],
+		    "parameters": [
+		      {
+		        "name": "spot",
+		        "in": "body",
+		        "description": "Spot to add",
+		        "required": true,
+		        "schema": {
+		          "$ref": "#/definitions/NewSpot"
+		        }
+		      }
+		    ],
+		    "responses": {
+		      "200": {
+		        "description": "newly create spot",
+		        "schema": {
+		          "$ref": "#/definitions/Spot"
+		        }
+		      }
+		    }
+		  }
+		},
+		"/spot/{id}": {
+		  "delete": {
+		    "tags": [
+		      "spot"
+		    ],
+		    "description": "deletes a spot",
+		    "parameters": [
+		      {
+		        "name": "id",
+		        "in": "path",
+		        "description": "ID of spot to delete",
+		        "required": true,
+		        "type": "integer"
+		      }
+		    ],
+		    "responses": {
+		      "204": {
+		        "description": "spot deleted"
+		      }
+		    }
+		  },
+		  "put": {
+		    "tags": [
+		      "spot"
+		    ],
+		    "description": "Edit a User",
+		    "produces": [
+		      "application/json"
+		    ],
+		    "parameters": [
+		      {
+		        "name": "spot",
+		        "in": "body",
+		        "description": "User to edit",
+		        "required": true,
+		        "schema": {
+		          "$ref": "#/definitions/NewSpot"
+		        }
+		      },
+		      {
+		        "name": "id",
+		        "in": "path",
+		        "description": "ID of spot to delete",
+		        "required": true,
+		        "type": "integer"
+		      }
+		    ],
+		    "responses": {
+		      "200": {
+		        "description": "edited spot",
+		        "schema": {
+		          "$ref": "#/definitions/Spot"
+		        }
+		      }
+		    }
+		  },
+		  "get": {
+		    "tags": [
+		      "spot"
+		    ],
+		    "description": "Gets a single spot",
+		    "produces": [
+		      "application/json"
+		    ],
+		    "parameters": [
+		      {
+		        "name": "id",
+		        "in": "path",
+		        "description": "ID of spot to fetch",
+		        "required": true,
+		        "type": "integer"
+		      }
+		    ],
+		    "responses": {
+		      "200": {
+		        "description": "Spot",
+		        "schema": {
+		          "$ref": "#/definitions/Spot"
+		        }
+		      }
+		    }
+		  }
+		}
 	},
 	"definitions": {
 		"User": {
@@ -330,6 +466,31 @@
 				},
 				"password": {
 					"type": "string"
+				}
+			}
+		},
+		"Spot": {
+			"type": "object",
+			"properties": {
+				"_id": {
+					"type": "integer"
+				},
+				"lat": {
+					"type": "number"
+				},
+				"long": {
+					"type": "number"
+				}
+			}
+		},
+		"NewSpot": {
+			"type": "object",
+			"properties": {
+				"lat": {
+					"type": "number"
+				},
+				"long": {
+					"type": "number"
 				}
 			}
 		}
